implementing scraping by sequence number